force-app/main/default/objects/animalos__Animal_Relationship__c/animalos__Animal_Relationship__c.object-meta.xml
<CustomObject>
    <label>Animal Relationship</label>
    <nameField>
        <displayFormat>AR{00000}</displayFormat>
        <label>Animal Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>