force-app/main/default/objects/animalos__Animal_Relationship__c/fields/animalos__Animal__c.field-meta.xml
<CustomField>
    <fullName>animalos__Animal__c</fullName>
    <label>Animal</label>
    <referenceTo>animalos__Animal__c</referenceTo>
    <relationshipLabel>Animal Relationships</relationshipLabel>
    <relationshipName>Animal_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>