force-app/main/default/objects/animalos__Animal_Relationship__c/fields/animalos__Animal_Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Animal_Type__c</fullName>
    <formula>TEXT(animalos__Animal__r.animalos__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Type</label>
    <type>Text</type>
</CustomField>