force-app/main/default/objects/animalos__Animal_Relationship__c/fields/animalos__Related_Animal__c.field-meta.xml
<CustomField>
    <fullName>animalos__Related_Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Animal</label>
    <referenceTo>animalos__Animal__c</referenceTo>
    <relationshipLabel>Animal Relationships (Related Animal)</relationshipLabel>
    <relationshipName>Related_Animal_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>