force-app/main/default/objects/animalos__Animal_Relationship__c/fields/animalos__Related_Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>animalos__Related_Animal_Name__c</fullName>
    <formula>animalos__Related_Animal__r.animalos__Animal_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Animal Name</label>
    <type>Text</type>
</CustomField>